SQRP-572 Implement ReportableCeilingStore (period high-water ceiling)