@@ -19,8 +19,8 @@
  */
 package org.sonar.db.property;
 
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableSet;
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -28,6 +28,13 @@ import java.util.Objects;
 import java.util.Optional;
 import java.util.Random;
 import java.util.Set;
+import java.util.concurrent.Callable;
+import java.util.concurrent.CyclicBarrier;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.concurrent.Future;
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
@@ -59,6 +66,7 @@ import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.clearInvocations;
 import static org.mockito.Mockito.doThrow;
 import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.verifyNoInteractions;
 import static org.mockito.Mockito.verifyNoMoreInteractions;
@@ -440,21 +448,21 @@ class InternalPropertiesDaoIT {
     underTest.save(dbSession, "key3", VALUE_SIZE_4001);
     Set<String> keys = ImmutableSet.of(A_KEY, "key2", "key3", "non_existent_key");
     List<InternalPropertyDto> allInternalPropertyDtos =
-      dbSession.getMapper(InternalPropertiesMapper.class).selectAsText(ImmutableList.copyOf(keys));
-    List<InternalPropertyDto> clobPropertyDtos = dbSession.getMapper(InternalPropertiesMapper.class).selectAsClob(ImmutableList.of("key3"));
+      dbSession.getMapper(InternalPropertiesMapper.class).selectAsText(List.copyOf(keys));
+    List<InternalPropertyDto> clobPropertyDtos = dbSession.getMapper(InternalPropertiesMapper.class).selectAsClob(List.of("key3"));
 
     InternalPropertiesMapper mapperMock = mock(InternalPropertiesMapper.class);
     DbSession dbSessionMock = mock(DbSession.class);
     when(dbSessionMock.getMapper(InternalPropertiesMapper.class)).thenReturn(mapperMock);
-    when(mapperMock.selectAsText(ImmutableList.copyOf(keys)))
+    when(mapperMock.selectAsText(List.copyOf(keys)))
       .thenReturn(allInternalPropertyDtos);
-    when(mapperMock.selectAsClob(ImmutableList.of("key3")))
+    when(mapperMock.selectAsClob(List.of("key3")))
       .thenReturn(clobPropertyDtos);
 
     underTest.selectByKeys(dbSessionMock, keys);
 
-    verify(mapperMock).selectAsText(ImmutableList.copyOf(keys));
-    verify(mapperMock).selectAsClob(ImmutableList.of("key3"));
+    verify(mapperMock).selectAsText(List.copyOf(keys));
+    verify(mapperMock).selectAsClob(List.of("key3"));
     verifyNoMoreInteractions(mapperMock);
   }
 
@@ -504,8 +512,8 @@ class InternalPropertiesDaoIT {
     InternalPropertiesMapper mapperMock = mock(InternalPropertiesMapper.class);
     DbSession dbSessionMock = mock(DbSession.class);
     when(dbSessionMock.getMapper(InternalPropertiesMapper.class)).thenReturn(mapperMock);
-    when(mapperMock.selectAsText(ImmutableList.of(propertyKey)))
-      .thenReturn(ImmutableList.of());
+    when(mapperMock.selectAsText(List.of(propertyKey)))
+      .thenReturn(List.of());
     doThrow(RuntimeException.class).when(mapperMock).insertAsText(eq(propertyKey), anyString(), anyLong());
 
     assertThat(underTest.tryLock(dbSessionMock, name, 60)).isFalse();
@@ -531,12 +539,183 @@ class InternalPropertiesDaoIT {
     InternalPropertyDto dto = new InternalPropertyDto();
     dto.setKey(propertyKey);
     dto.setValue(String.valueOf(oldTimestamp - 1));
-    when(mapperMock.selectAsText(ImmutableList.of(propertyKey)))
-      .thenReturn(ImmutableList.of(dto));
+    when(mapperMock.selectAsText(List.of(propertyKey)))
+      .thenReturn(List.of(dto));
 
     assertThat(underTest.tryLock(dbSessionMock, name, lockDurationSeconds)).isFalse();
 
     assertThat(underTest.selectByKey(dbSession, propertyKey)).contains(String.valueOf(oldTimestamp));
+  }
+
+  @Test
+  void raiseTextIfGreater_throws_IAE_if_key_is_null() {
+    expectKeyNullOrEmptyIAE(() -> underTest.raiseTextIfGreater(dbSession, null, 8L));
+  }
+
+  @Test
+  void raiseTextIfGreater_throws_IAE_if_key_is_empty() {
+    expectKeyNullOrEmptyIAE(() -> underTest.raiseTextIfGreater(dbSession, EMPTY_STRING, 8L));
+  }
+
+  @Test
+  void raiseTextIfGreater_inserts_when_absent() {
+    assertThat(underTest.raiseTextIfGreater(dbSession, A_KEY, 8_000_000L)).isEqualTo(8_000_000L);
+    dbSession.commit();
+
+    assertThat(underTest.selectByKey(dbSession, A_KEY)).contains("8000000");
+  }
+
+  @Test
+  void raiseTextIfGreater_raises_when_greater() {
+    underTest.save(dbSession, A_KEY, "5");
+    dbSession.commit();
+
+    assertThat(underTest.raiseTextIfGreater(dbSession, A_KEY, 8L)).isEqualTo(8L);
+    dbSession.commit();
+
+    assertThat(underTest.selectByKey(dbSession, A_KEY)).contains("8");
+  }
+
+  @Test
+  void raiseTextIfGreater_is_noop_when_not_greater() {
+    underTest.save(dbSession, A_KEY, "8");
+    dbSession.commit();
+
+    assertThat(underTest.raiseTextIfGreater(dbSession, A_KEY, 6L)).isEqualTo(8L);
+    assertThat(underTest.selectByKey(dbSession, A_KEY)).contains("8");
+  }
+
+  @Test
+  void raiseTextIfGreater_overwrites_when_unparseable() {
+    underTest.save(dbSession, A_KEY, "1e6");
+    dbSession.commit();
+
+    assertThat(underTest.raiseTextIfGreater(dbSession, A_KEY, 8L)).isEqualTo(8L);
+    dbSession.commit();
+
+    assertThat(underTest.selectByKey(dbSession, A_KEY)).contains("8");
+  }
+
+  @Test
+  void raiseTextIfGreater_overwrites_when_empty() {
+    underTest.saveAsEmpty(dbSession, A_KEY);
+    dbSession.commit();
+
+    assertThat(underTest.raiseTextIfGreater(dbSession, A_KEY, 8L)).isEqualTo(8L);
+    dbSession.commit();
+
+    assertThat(underTest.selectByKey(dbSession, A_KEY)).contains("8");
+  }
+
+  @Test
+  void raiseTextIfGreater_rewrites_clob_backed_unparseable_row_as_text() {
+    underTest.save(dbSession, A_KEY, VALUE_SIZE_4001);
+    dbSession.commit();
+    assertThatInternalProperty(A_KEY).hasClobValue(VALUE_SIZE_4001);
+
+    assertThat(underTest.raiseTextIfGreater(dbSession, A_KEY, 8L)).isEqualTo(8L);
+    dbSession.commit();
+
+    assertThat(underTest.selectByKey(dbSession, A_KEY)).contains("8");
+    assertThatInternalProperty(A_KEY).hasTextValue("8");
+  }
+
+  @Test
+  void raiseTextIfGreater_when_insert_races_rolls_back_and_returns_winner() {
+    InternalPropertiesMapper mapperMock = mock(InternalPropertiesMapper.class);
+    DbSession dbSessionMock = mock(DbSession.class);
+    when(dbSessionMock.getMapper(InternalPropertiesMapper.class)).thenReturn(mapperMock);
+
+    InternalPropertyDto winner = new InternalPropertyDto();
+    winner.setKey(A_KEY);
+    winner.setValue("8000000");
+    when(mapperMock.selectAsText(List.of(A_KEY)))
+      .thenReturn(List.of())
+      .thenReturn(List.of(winner));
+    doThrow(RuntimeException.class).when(mapperMock).insertAsText(eq(A_KEY), anyString(), anyLong());
+
+    assertThat(underTest.raiseTextIfGreater(dbSessionMock, A_KEY, 1_000_000L)).isEqualTo(8_000_000L);
+    verify(dbSessionMock).rollback();
+  }
+
+  @Test
+  void raiseTextIfGreater_when_insert_fails_and_row_still_absent_throws_with_cause() {
+    InternalPropertiesMapper mapperMock = mock(InternalPropertiesMapper.class);
+    DbSession dbSessionMock = mock(DbSession.class);
+    when(dbSessionMock.getMapper(InternalPropertiesMapper.class)).thenReturn(mapperMock);
+    when(mapperMock.selectAsText(List.of(A_KEY))).thenReturn(List.of());
+    RuntimeException insertFailure = new RuntimeException("constraint");
+    doThrow(insertFailure).when(mapperMock).insertAsText(eq(A_KEY), anyString(), anyLong());
+
+    assertThatThrownBy(() -> underTest.raiseTextIfGreater(dbSessionMock, A_KEY, 1_000_000L))
+      .isInstanceOf(IllegalStateException.class)
+      .hasMessageContaining(A_KEY)
+      .hasCause(insertFailure);
+    verify(dbSessionMock).rollback();
+  }
+
+  @Test
+  void raiseTextIfGreater_when_attempts_exhausted_and_stored_is_at_least_requested_returns_stored() {
+    InternalPropertiesMapper mapperMock = mock(InternalPropertiesMapper.class);
+    DbSession dbSessionMock = mock(DbSession.class);
+    when(dbSessionMock.getMapper(InternalPropertiesMapper.class)).thenReturn(mapperMock);
+    AtomicInteger selects = new AtomicInteger();
+    when(mapperMock.selectAsText(List.of(A_KEY))).thenAnswer(invocation -> {
+      if (selects.incrementAndGet() <= 8) {
+        return List.of(textDto("5"));
+      }
+      return List.of(textDto("10"));
+    });
+    when(mapperMock.replaceValue(A_KEY, "5", "8")).thenReturn(0);
+
+    assertThat(underTest.raiseTextIfGreater(dbSessionMock, A_KEY, 8L)).isEqualTo(10L);
+    verify(mapperMock, times(8)).replaceValue(A_KEY, "5", "8");
+  }
+
+  @Test
+  void raiseTextIfGreater_when_attempts_exhausted_and_stored_is_below_throws() {
+    InternalPropertiesMapper mapperMock = mock(InternalPropertiesMapper.class);
+    DbSession dbSessionMock = mock(DbSession.class);
+    when(dbSessionMock.getMapper(InternalPropertiesMapper.class)).thenReturn(mapperMock);
+    when(mapperMock.selectAsText(List.of(A_KEY))).thenReturn(List.of(textDto("5")));
+    when(mapperMock.replaceValue(A_KEY, "5", "8")).thenReturn(0);
+
+    assertThatThrownBy(() -> underTest.raiseTextIfGreater(dbSessionMock, A_KEY, 8L))
+      .isInstanceOf(IllegalStateException.class)
+      .hasMessageContaining(A_KEY)
+      .hasMessageContaining("8")
+      .hasMessageContaining("stored=5");
+  }
+
+  @Test
+  void raiseTextIfGreater_when_concurrent_raises_keeps_the_max() throws Exception {
+    long[] values = {1_000_000L, 8_000_000L, 3_000_000L, 6_000_000L, 8_000_000L, 2_000_000L, 7_000_000L, 4_000_000L};
+    int threads = values.length;
+    ExecutorService pool = Executors.newFixedThreadPool(threads);
+    CyclicBarrier start = new CyclicBarrier(threads);
+    List<Future<Long>> results = new ArrayList<>();
+    try {
+      for (long value : values) {
+        Callable<Long> task = () -> {
+          start.await(5, TimeUnit.SECONDS);
+          try (DbSession session = dbTester.getDbClient().openSession(false)) {
+            long result = underTest.raiseTextIfGreater(session, A_KEY, value);
+            session.commit();
+            return result;
+          }
+        };
+        results.add(pool.submit(task));
+      }
+      for (int i = 0; i < threads; i++) {
+        assertThat(results.get(i).get(5, TimeUnit.SECONDS)).isBetween(values[i], 8_000_000L);
+      }
+    } finally {
+      pool.shutdownNow();
+    }
+
+    try (DbSession session = dbTester.getDbClient().openSession(false)) {
+      assertThat(underTest.selectByKey(session, A_KEY)).contains("8000000");
+    }
   }
 
   @Test
@@ -566,6 +745,13 @@ class InternalPropertiesDaoIT {
 
   private static String propertyKeyOf(String lockName) {
     return "lock." + lockName;
+  }
+
+  private static InternalPropertyDto textDto(String value) {
+    InternalPropertyDto dto = new InternalPropertyDto();
+    dto.setKey(A_KEY);
+    dto.setValue(value);
+    return dto;
   }
 
   private void expectKeyNullOrEmptyIAE(ThrowingCallable callback) {
